# funcprog_univ

./: README.md
HaskellTask/: Task1-Horse.cabal  task5.hi  task5.hs
HaskellTask/HaskellTask6/: HaskellTask6.cabal
HaskellTask/Task1/: Task1.cabal
HaskellTask/Task1/src/: BruteforceKnights.hs  KnigtsTour.hs  Main.hs
HaskellTask/kript/src/: CesarCipher.java  Euclid.java  Main.java  Sol2.java  Solution.java  Teorver.java  Vizhener.java
HaskellTask/scala-test/src/: Matrix.scala
Lab2/: Lab2.cabal
Lab2/src/: Huffman.hs
Lisp.L3/: lab3.lisp
Lisp.L4/: Lab4.lisp  in.txt  lab4.txt  llab4.lisp
LispTasks/: f.lisp  ff.lisp  task3.lisp  test.lisp
Task3/: Task3.cabal
Task3/src/: Main.hs
l2/: ChangeLog.md  LICENSE  Setup.hs  l2.cabal
l2/src/: B.cs  Main.hs
lab1/: lab1.cabal
lab1/src/: Main.hs
