name:              lab1
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable lab1
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base,
                   HDBC,
                   HDBC-postgresql,
                   containers,
                   bytestring,
                   time
