name:              Task1
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable Task1
  main-is:         BruteforceKnights.hs
  hs-source-dirs:  src
  build-depends:   base,
                   containers,
                   mtl,
                   logict -any,
                   HDBC-postgresql
